--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <title>Flask Intro</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
-  <body>
-    <div class="container">
-      <h1>Welcome to Flask!</h2>
-      <br>
-      <p>Click <a href="/">here</a> to go home.</p>
+  <body ng-app>
+    <div>
+      <label>Name:</label>
+      <input type="text" ng-model="name" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{ name }}!</h1>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.2/angular.min.js"></script>
+
+
+    <script>
+
+    </script>
+
   </body>
 </html>
