--- a/templates/prospects/new.html
+++ b/templates/prospects/new.html
@@ -2,16 +2,14 @@
 <html>
 
 <head>
-  <title> Test </title>
-
+  <title> Submit New </title>
 </head>
 
 <body>
-  <div id="container">
-    <div class="title">
-      <h1>POST request with Flask</h1>
-    </div>
-    <div id="content">
+
+  <a href="/">
+    View all prospects
+  </a>
 
       <form method="post" action="/hello/">
         <label for="firstName">First Name </label>
@@ -28,9 +26,7 @@
 
         <input type="submit" />
       </form>
-    </div>
 
-  </div>
 </body>
 
 </html>
