--- a/templates/prospects/index.html
+++ b/templates/prospects/index.html
@@ -95,13 +95,18 @@
 								</article>
 							</div><!--end .col -->
 						</div><!--end .row -->
-						<div class="row">
+
+            <div class="row">
 							<div class="col-md-12">
 								<h4>Example 1: Show/hide columns</h4>
 							</div><!--end .col -->
 							<div class="col-lg-12">
 								<div class="table-responsive">
-									<table id="datatable1" class="table table-striped table-hover">
+
+                  <table
+                    id="datatable1"
+                    class="table table-striped table-hover"
+                    data-swftools="../../static/js/libs/DataTables/extensions/TableTools/swf/copy_csv_xls_pdf.swf">
 										<thead>
 											<tr>
 												<th>Rendering engine</th>
@@ -519,30 +524,6 @@
 						<!-- END DATATABLE 1 -->
 
 						<hr class="ruler-xxl"/>
-
-						<!-- BEGIN DATATABLE 2 -->
-						<div class="row">
-							<div class="col-md-12">
-								<h4>Example 2: Tabletools & row details</h4>
-							</div><!--end .col -->
-							<div class="col-lg-12">
-								<div class="table-responsive">
-									<table id="datatable2" class="table order-column hover" data-source="data/users.json" data-swftools="../../static/js/libs/DataTables/extensions/TableTools/swf/copy_csv_xls_pdf.swf">
-										<thead>
-											<tr>
-												<th></th>
-												<th>Name</th>
-												<th>Position</th>
-												<th>Office</th>
-												<th>Salary</th>
-											</tr>
-										</thead>
-									</table>
-								</div><!--end .table-responsive -->
-							</div><!--end .col -->
-						</div><!--end .row -->
-						<!-- END DATATABLE 2 -->
-
 					</div><!--end .section-body -->
 				</section>
 			</div><!--end #content-->
@@ -612,103 +593,24 @@
 		<script src="../../static/js/core/source/AppVendor.js"></script>
 		<script src="../../static/js/core/demo/Demo.js"></script>
 		<script src="../../static/js/core/demo/DemoTableDynamic.js"></script>
-		<!-- END JAVASCRIPT  -->
+    <!-- END JAVASCRIPT  -->
+
+    <script>
+      // $( document ).ready(function() {
+      //
+      //   var responseObj;
+      //   var keys;
+      //
+      //   $.getJSON('data/prospects.json', function(response) {
+      //
+      //       reponseObj = response;
+      //       keys = Object.keys(responseObj);
+      //       console.log("keys", keys)
+      //
+      //   })
+      //
+      // })
+    </script>
 
 	</body>
 </html>
-
-<!--
-<!doctype html>
-<html>
-
-  <head>
-    <title> Index </title>
-  </head>
-
-  <body>
-
-    <a href="/new/">
-      Create New Prospect
-    </a>
-
-
-    <h1> Table goes here </h1>
-
-  <table id="example" class="display" cellspacing="0" width="100%">
-      <thead>
-          <tr>
-            <th> first_name</th>
-            <th> last_name</th>
-            <th> toofr_email</th>
-            <th> company_url</th>
-            <th> toofr_confidence</th>
-            <th> facebook_url</th>
-            <th> linkedin_url</th>
-            <th> twitter_url</th>
-            <th> klout_score</th>
-            <th> twitter_followers</th>
-            <th> location</th>
-            <th> facebook_following</th>
-            <th> gender</th>
-            <th> angellist_followers</th>
-            <th> twitter_following</th>
-            <th> angellist_url</th>
-            <th> klout_topic</th>
-          </tr>
-      </thead>
-  </table>
-
-  <table id="prospects-index">
-  <thead>
-    <tr>
-      <th> first_name</th>
-      <th> last_name</th>
-      <th> toofr_email</th>
-      <th> company_url</th>
-      <th> toofr_confidence</th>
-      <th> facebook_url</th>
-      <th> linkedin_url</th>
-      <th> twitter_url</th>
-      <th> klout_score</th>
-      <th> twitter_followers</th>
-      <th> location</th>
-      <th> facebook_following</th>
-      <th> gender</th>
-      <th> angellist_followers</th>
-      <th> twitter_following</th>
-      <th> angellist_url</th>
-      <th> klout_topic</th>
-    </tr>
-  </thead>
-  <tbody>
-  </tbody>
-</table>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://s3.amazonaws.com/dynatable-docs-static/js/jquery.dynatable.js"></script>
-
-    <script>
-
-      $.getJSON( "data/prospects", function(data) {
-          $('#prospects-index').dynatable({
-            dataset: {
-              records: data
-            }
-          });
-      })
-
-      // $('#prospects-index').dynatable({
-      //   dataset: {
-      //     ajax: true,
-      //     ajaxUrl: '/data/prospects',
-      //     ajaxOnLoad: true,
-      //     records: []
-      //   }
-      // });
-
-    </script>
-
-  </body>
-
-</html>
--->
