--- a/templates/locked.html
+++ b/templates/locked.html
@@ -36,7 +36,7 @@
 						<div class="col-sm-12">
 							<img class="img-circle" src="../../godseye/static/img/avatar1.jpg?1403934956" alt="" />
 							<h2> Jonathan Sandlund </h2>
-							<form class="form" action="../../html/dashboards/dashboard.html" accept-charset="utf-8" method="post">
+							<form class="form" action="/" accept-charset="utf-8" method="post">
 								<div class="form-group floating-label">
 									<div class="input-group">
 										<div class="input-group-content">
