--- a/templates/prospects/new.html
+++ b/templates/prospects/new.html
@@ -1,32 +1,225 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<title>Material Admin - Dynamic tables</title>
 
-<head>
-  <title> Submit New </title>
-</head>
+		<!-- BEGIN META -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="keywords" content="your,keywords">
+		<meta name="description" content="Short explanation about this website">
+		<!-- END META -->
 
-<body>
+		<!-- BEGIN STYLESHEETS -->
+		<link href='http://fonts.googleapis.com/css?family=Roboto:300italic,400italic,300,400,500,700,900' rel='stylesheet' type='text/css'/>
+    <link type="text/css" rel="stylesheet" href="../../static/css/theme-default/bootstrap.css?1422792965" />
+		<link type="text/css" rel="stylesheet" href="../../static/css/theme-default/materialadmin.css?1425466319" />
+		<link type="text/css" rel="stylesheet" href="../../static/css/theme-default/font-awesome.min.css?1422529194" />
+		<link type="text/css" rel="stylesheet" href="../../static/css/theme-default/material-design-iconic-font.min.css?1421434286" />
+    <link type="text/css" rel="stylesheet" href="../../static/css/theme-default/libs/dropzone/dropzone-theme.css?1424887864" />
+		<!-- END STYLESHEETS -->
 
-  <a href="/">
-    View all prospects
-  </a>
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		<script type="text/javascript" src="../../static/js/libs/utils/html5shiv.js?1403934957"></script>
+		<script type="text/javascript" src="../../static/js/libs/utils/respond.min.js?1403934956"></script>
+		<![endif]-->
+	</head>
+	<body class="menubar-hoverable menubar-pin menubar-first">
 
-      <form method="post" action="/hello/">
-        <label for="firstName">First Name </label>
-        <input type="text" name="firstName" />
-        <br/>
+		<!-- BEGIN HEADER-->
+		<header id="header" >
+			<div class="headerbar">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="headerbar-left">
+					<ul class="header-nav header-nav-options">
+						<li class="header-nav-brand" >
+							<div class="brand-holder">
+								<a href="/">
+									<span class="text-lg text-bold text-primary"> GOD'S EYE </span>
+								</a>
+							</div>
+						</li>
+						<li>
+							<a class="btn btn-icon-toggle menubar-toggle" data-toggle="menubar" href="javascript:void(0);">
+								<i class="fa fa-bars"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
 
-        <label for="lastName">Last Name:</label>
-        <input type="text" name="lastName" />
-        <br />
 
-        <label for="companyUrl"> Company Name </label>
-        <input type="text" name="companyUrl" />
-        <br />
 
-        <input type="submit" />
-      </form>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="headerbar-right">
+					<ul class="header-nav header-nav-options">
+						<li>
+							<!-- Search form -->
+							<form class="navbar-search" role="search">
+								<div class="form-group">
+									<input type="text" class="form-control" name="headerSearch" placeholder="Enter your keyword">
+								</div>
+								<button type="submit" class="btn btn-icon-toggle ink-reaction"><i class="fa fa-search"></i></button>
+							</form>
+						</li>
+					</ul><!--end .header-nav-toggle -->
+				</div><!--end #header-navbar-collapse -->
+			</div>
+		</header>
+		<!-- END HEADER-->
 
-</body>
+		<!-- BEGIN BASE-->
+		<div id="base">
 
+
+			<!-- FORM-->
+			<div id="content">
+				<section class="style-default-bright">
+
+<!--
+          <form method="post" action="/hello/">
+            <label for="firstName">First Name </label>
+            <input type="text" name="firstName" />
+            <br/>
+
+            <label for="lastName">Last Name:</label>
+            <input type="text" name="lastName" />
+            <br />
+
+            <label for="companyUrl"> Company Name </label>
+            <input type="text" name="companyUrl" />
+            <br />
+
+            <input type="submit" />
+          </form> -->
+
+          <div class="row">
+
+              <div class="col-lg-12">
+								<h2 class="text-primary"> Submit New Prospect </h2>
+							</div><!--end .col -->
+
+								<div class="col-lg-12">
+
+                <form method="post" action="/hello/" class="form-inline">
+									<div class="card">
+										<div class="card-body">
+
+                      <div class="form-group">
+												<input type="text" name="firstName" class="form-control">
+												<label for="firstName">First Name </label>
+											</div>
+
+                      <div class="form-group">
+												<input type="text" name="lastName" class="form-control">
+												<label for="lastName">Last Name:</label>
+											</div>
+
+                      <div class="form-group">
+												<input type="text" class="form-control" name="companyUrl" />
+                        <label for="companyUrl"> Company Url </label>
+											</div>
+
+
+                      <button type="submit" class="btn btn-raised btn-default-light ink-reaction"> Submit </button>
+										</div><!--end .card-body -->
+									</div><!--end .card -->
+								</form>
+
+                <hr>
+
+
+								<div class="card">
+									<div class="card-head style-primary">
+										<header> Bulk Upload Prospects </header>
+									</div>
+									<div class="card-body no-padding">
+										<form action="../../html/forms/advanced.html" class="dropzone dz-clickable" id="my-awesome-dropzone">
+											<div class="dz-message">
+												<h3>Drop files here or click to upload.</h3>
+											</div>
+										</form>
+									</div><!--end .card-body -->
+								</div><!--end .card -->
+
+
+							</div><!--end .col -->
+					</div><!--end .section-body -->
+				</section>
+			</div><!--end #content-->
+			<!-- END CONTENT -->
+
+			<!-- BEGIN MENUBAR-->
+			<div id="menubar" class="menubar-inverse ">
+				<div class="menubar-fixed-panel">
+					<div>
+						<a class="btn btn-icon-toggle btn-default menubar-toggle" data-toggle="menubar" href="javascript:void(0);">
+							<i class="fa fa-bars"></i>
+						</a>
+					</div>
+					<div class="expanded">
+						<a href="/">
+							<span class="text-lg text-bold text-primary "> GOD'S EYE </span>
+						</a>
+					</div>
+				</div>
+
+        <div class="menubar-scroll-panel">
+
+					<!-- BEGIN MAIN MENU -->
+					<ul id="main-menu" class="gui-controls">
+
+						<li>
+							<a href="/" >
+                <div class="gui-icon"><i class="fa fa-user"></i></div>
+								<span class="title"> PROSPECTS </span>
+							</a>
+						</li><!--end /menu-li -->
+
+						<li>
+							<a href="/leads/" >
+                <div class="gui-icon"><i class="fa fa-user-plus"></i></div>
+								<span class="title"> LEADS </span>
+							</a>
+						</li><!--end /menu-li -->
+
+            <li>
+							<a href="/prospects/new" >
+                <div class="gui-icon"><i class="fa fa-plus-circle"></i></div>
+								<span class="title"> NEW PROSPECT </span>
+							</a>
+						</li><!--end /menu-li -->
+
+					</ul><!--end .main-menu -->
+					<!-- END MAIN MENU -->
+
+				</div><!--end .menubar-scroll-panel-->
+			</div><!--end #menubar-->
+			<!-- END MENUBAR -->
+		</div><!--end #base-->
+		<!-- END BASE -->
+
+		<!-- BEGIN JAVASCRIPT -->
+		<script src="../../static/js/libs/jquery/jquery-1.11.2.min.js"></script>
+		<script src="../../static/js/libs/jquery/jquery-migrate-1.2.1.min.js"></script>
+		<script src="../../static/js/libs/bootstrap/bootstrap.min.js"></script>
+		<script src="../../static/js/libs/spin.js/spin.min.js"></script>
+		<script src="../../static/js/libs/autosize/jquery.autosize.min.js"></script>
+		<script src="../../static/js/libs/DataTables/jquery.dataTables.min.js"></script>
+		<script src="../../static/js/libs/DataTables/extensions/ColVis/js/dataTables.colVis.min.js"></script>
+		<script src="../../static/js/libs/DataTables/extensions/TableTools/js/dataTables.tableTools.min.js"></script>
+		<script src="../../static/js/libs/nanoscroller/jquery.nanoscroller.min.js"></script>
+		<script src="../../static/js/core/source/App.js"></script>
+		<script src="../../static/js/core/source/AppNavigation.js"></script>
+		<script src="../../static/js/core/source/AppOffcanvas.js"></script>
+		<script src="../../static/js/core/source/AppCard.js"></script>
+		<script src="../../static/js/core/source/AppForm.js"></script>
+		<script src="../../static/js/core/source/AppNavSearch.js"></script>
+		<script src="../../static/js/core/source/AppVendor.js"></script>
+		<script src="../../static/js/core/demo/Demo.js"></script>
+    <script src="../../static/js/libs/dropzone/dropzone.min.js"></script>
+    <script src="../../static/js/core/demo/DemoFormComponents.js"></script>
+    <!-- END JAVASCRIPT  -->
+
+	</body>
 </html>
