setup login page

--- a/templates/leads/index.html
+++ b/templates/leads/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Material Admin - Dynamic tables</title>
+		<title> God's Eye </title>
 
 		<!-- BEGIN META -->
 		<meta charset="utf-8">
@@ -89,7 +89,7 @@
 							<div class="col-md-8">
 								<article class="margin-bottom-xxl">
 									<p class="lead">
-										Users with emails validated by FullContact
+										These prospects have emails that were validated by Full Contact 
 									</p>
 								</article>
 							</div><!--end .col -->
