--- a/templates/prospects/new.html
+++ b/templates/prospects/new.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Material Admin - Dynamic tables</title>
+		<title> God's Eye </title>
 
 		<!-- BEGIN META -->
 		<meta charset="utf-8">
